--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,32 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+img,
+abbr {
+  display: block;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+ul.gallery {
+  width: 1128px;
+  margin: 0 auto;
+  list-style-type: none;
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+li.gallery-item {
+  width: calc((100% - 48px) / 3);
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+img {
+  width: 100%;
+  object-fit: cover;
+}
+
+img:hover {
+  width: 101%;
+  height: 101%;
+}
+
+.js-lightbox {
+  background-color: #2e2f42;
 }
