--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,15 @@
+body {
+  margin: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #212121;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -10,7 +22,18 @@ a {
 }
 
 button {
-  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+  height: 40px;
+}
+
+button:hover {
+  background-color: #6c8cff;
 }
 
 img {
@@ -61,4 +84,58 @@ img:hover {
 
 .js-lightbox {
   background-color: #2e2f42;
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 296px;
+  background-color: #fff;
+}
+
+.feedback-form label {
+  color: #2e2f42;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 328px;
+  height: 24px;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #2e2f42;
+}
+
+.feedback-form textarea {
+  resize: none;
+  height: 64px;
+}
+
+.feedback-form input:hover,
+.feedback-form textarea:hover {
+  border-color: #000;
+}
+
+.feedback-form input:focus,
+.feedback-form input:active,
+.feedback-form textarea:focus,
+.feedback-form textarea:active {
+  outline: none;
+  border-color: #808080;
+}
+
+.feedback-form button {
+  width: 86px;
+}
+
+input,
+textarea {
+  font-family: inherit;
 }
