--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,10 @@
 body {
-  margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 
 ul {
@@ -40,24 +37,6 @@ img {
   display: block;
 }
 
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 40px;
-}
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-
 ul.gallery {
   width: 1128px;
   margin: 0 auto;
@@ -86,7 +65,7 @@ img:hover {
   background-color: #2e2f42;
 }
 
-.feedback-form {
+.search-form {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -97,12 +76,7 @@ img:hover {
   background-color: #fff;
 }
 
-.feedback-form label {
-  color: #2e2f42;
-}
-
-.feedback-form input,
-.feedback-form textarea {
+.search-form input {
   border: 1px solid #808080;
   border-radius: 4px;
   width: 328px;
@@ -113,29 +87,20 @@ img:hover {
   color: #2e2f42;
 }
 
-.feedback-form textarea {
-  resize: none;
-  height: 64px;
-}
-
-.feedback-form input:hover,
-.feedback-form textarea:hover {
+.search-form input:hover {
   border-color: #000;
 }
 
-.feedback-form input:focus,
-.feedback-form input:active,
-.feedback-form textarea:focus,
-.feedback-form textarea:active {
+.search-form input:focus,
+.search-form input:active {
   outline: none;
   border-color: #808080;
 }
 
-.feedback-form button {
+.search-form button {
   width: 86px;
 }
 
-input,
-textarea {
+input {
   font-family: inherit;
 }
