--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,9 +8,8 @@ body {
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  list-style-type: none;
+  padding-left: 0;
 }
 
 a {
@@ -39,9 +38,7 @@ img {
 
 ul.gallery {
   width: 1128px;
-  margin: 0 auto;
-  list-style-type: none;
-  padding-left: 0;
+  margin: 32px auto;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
@@ -56,9 +53,9 @@ img {
   object-fit: cover;
 }
 
-img:hover {
-  width: 101%;
-  height: 101%;
+.image-stats {
+  display: flex;
+  gap: 28px;
 }
 
 .js-lightbox {
@@ -67,20 +64,18 @@ img:hover {
 
 .search-form {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 8px;
-  border-radius: 8px;
-  padding: 24px;
-  width: 408px;
-  height: 296px;
-  background-color: #fff;
+  width: 371px;
+  height: 40px;
+  margin: 0 auto;
 }
 
 .search-form input {
   border: 1px solid #808080;
   border-radius: 4px;
-  width: 328px;
-  height: 24px;
+  width: 272px;
+  height: 40px;
   padding: 8px 16px;
   font-weight: 400;
   font-size: 16px;
@@ -103,4 +98,41 @@ img:hover {
 
 input {
   font-family: inherit;
+}
+.loader.hidden {
+  display: none;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-width: 3px;
+  border-style: dashed solid solid dotted;
+  border-color: #ff3d00 #ff3d00 transparent #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  top: 100px;
+  left: 50%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 20px;
+  top: 31px;
+  border: 10px solid transparent;
+  border-right-color: #ff3d00;
+  transform: rotate(-40deg);
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
