--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,28 +34,32 @@ button:hover {
 
 img {
   display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 ul.gallery {
-  width: 1128px;
+  width: 1148px;
   margin: 32px auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 20px;
 }
 
 li.gallery-item {
   width: calc((100% - 48px) / 3);
-}
-
-img {
-  width: 100%;
-  object-fit: cover;
+  border: 1px solid #808080;
 }
 
 .image-stats {
   display: flex;
+  justify-content: space-evenly;
   gap: 28px;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
 
 .js-lightbox {
