--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,14 @@ body {
   color: #2e2f42;
 }
 
+.loader.hidden {
+  display: none;
+}
+
+.load-button.hidden {
+  display: none;
+}
+
 ul {
   list-style-type: none;
   padding-left: 0;
@@ -103,9 +111,6 @@ li.gallery-item {
 input {
   font-family: inherit;
 }
-.loader.hidden {
-  display: none;
-}
 
 .loader {
   width: 48px;
@@ -139,4 +144,9 @@ input {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.load-button {
+  display: block;
+  margin: 0 auto;
 }
